test(product): fixed unit tests mocks